--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import "tailwindcss";
 
 :root {
@@ -13,12 +15,23 @@
 
 
 
-.font-bebas{
+.font-bebas {
   font-family: 'Bebas Neue', sans-serif;
 }
-.font-roboto{
+
+.font-roboto {
   font-family: 'Roboto', sans-serif;
 }
+
+.font-anton {
+  font-family: 'Anton', sans-serif;
+}
+
+.font-jamjuree{
+  font-family: 'Bai Jamjuree', sans-serif;
+}
+
+
 
 .faixa-wrapper {
   overflow: hidden;
@@ -35,9 +48,51 @@
   0% {
     transform: translateX(0);
   }
+
   100% {
     transform: translateX(-50%);
   }
 }
 
 
+@layer components {
+  .cut-border-left {
+    @apply relative inline-flex items-center h-14 px-6 bg-black text-white font-semibold tracking-widest border-2 rounded-full;
+    margin-right: -14px;
+  }
+
+  .cut-border-right {
+    @apply relative inline-flex items-center justify-center h-14 w-14 bg-black text-2xl border-2 rounded-full cursor-pointer;
+    margin-left: -14px;
+  }
+
+  /* recorte do texto */
+  .cut-border-left::after {
+    content: "";
+    position: absolute;
+    right: -10px;
+    top: 50%;
+    width: 20px;
+    height: 20px;
+    background: #000;
+    /* fundo da página */
+    border: inherit;
+    border-radius: 9999px;
+    transform: translateY(-50%);
+  }
+
+  /* recorte do botão */
+  .cut-border-right::before {
+    content: "";
+    position: absolute;
+    left: -10px;
+    top: 50%;
+    width: 20px;
+    height: 20px;
+    background: #000;
+    /* fundo da página */
+    border: inherit;
+    border-radius: 9999px;
+    transform: translateY(-50%);
+  }
+}
