--- a/src/index.css
+++ b/src/index.css
@@ -96,3 +96,31 @@
     transform: translateY(-50%);
   }
 }
+
+
+
+
+/* Chrome, Edge, Safari */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #0b0b0b;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, #f5a205, #e7a040);
+  border-radius: 10px;
+  border: 2px solid #0b0b0b; /* cria “padding” visual */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #ffd46a, #f5a205);
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #f5a205 #0b0b0b;
+}
