Criação do passaporte dem grupo

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@
   overflow-x: hidden;
   background-color: black;
   scroll-behavior: smooth;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 
