--- a/src/index.css
+++ b/src/index.css
@@ -123,3 +123,19 @@
   scrollbar-width: thin;
   scrollbar-color: #f5a205 #0b0b0b;
 }
+/*Animação badge*/
+@keyframes pulseScale {
+  0% {
+    transform: scale(1) rotate(-15deg);
+  }
+  50% {
+    transform: scale(1.1) rotate(-15deg);
+  }
+  100% {
+    transform: scale(1) rotate(-15deg);
+  }
+}
+
+.animate-badge {
+  animation: pulseScale 1.8s ease-in-out infinite;
+}
